services/backend/k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: olla-indexer
  labels:
    app: olla-indexer
    app.kubernetes.io/name: olla-indexer
    app.kubernetes.io/part-of: olla
spec:
  replicas: 1
  selector:
    matchLabels:
      app: olla-indexer
  template:
    metadata:
      labels:
        app: olla-indexer
    spec:
      imagePullSecrets:
        - name: olla-containers
      containers:
        - name: olla-indexer
          image: registry.digitalocean.com/olla-containers/olla-indexer
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          resources:
            limits:
              memory: 512Mi
              cpu: 500m
            requests:
              memory: 256Mi
              cpu: 250m
          livenessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 5
            periodSeconds: 5
