services/backend/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: olla-indexer
  labels:
    app: olla-indexer
    app.kubernetes.io/name: olla-indexer
    app.kubernetes.io/part-of: olla
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
  selector:
    app: olla-indexer
